version 0.60
15/03/2018	
    - updated field type:date in the metadata test (margaretha)
    - removed loading application context via BeanFactory (margaretha)
    - fixed missing kustvakt-lite.conf (margaretha))

version 0.59.9 
01/02/2018
	- renamed light to lite (margaretha)
	- added Changes file (margaretha)
	- updated library versions and java environment (margaretha)
	- added metadata test (diewald)
	
version 0.59.8 
17/01/2018 
	- restructured Kustvakt and created /lite project
	- removed version from service paths (margaretha)
	- updated query serialization tests (margaretha)
	- added statistic service test (margaretha)
	- updated KustvaktResponseHandler (margaretha)
	- removed FastJerseyLight and simplified Jersey test configuration (margaretha)	