@@ -1,8 +1,9 @@
 version 0.60
-15/03/2018	
+23/03/2018	
     - updated field type:date in the metadata test (margaretha)
     - removed loading application context via BeanFactory (margaretha)
-    - fixed missing kustvakt-lite.conf (margaretha))
+    - fixed missing kustvakt-lite.conf (margaretha)
+    - added support for highlights in matchinfo (diewald)
 
 version 0.59.9 
 01/02/2018
